--- a/src/main/resources/static/review.html
+++ b/src/main/resources/static/review.html
@@ -25,11 +25,23 @@
   	</div>
   	</div>
     <div class="container mt-5 text-center">
-        <h2>Review Your Answers</h2><br>
+		<div class="form-check form-switch form-check-reverse">
+		  <input class="form-check-input" type="checkbox" id="markedSwitch" checked>
+		  <label class="form-check-label" for="markedSwitch"><b>Marked as Review</b></label>
+		</div>
+		<div class="form-check form-switch form-check-reverse">
+		  <input class="form-check-input" type="checkbox" id="unansweredSwitch">
+		  <label class="form-check-label" for="unansweredSwitch"><b>UnAnswered</b></label>
+		</div>
         <div id="reviewContainer" class="revque text-start"></div>
-        <button class="btn btn-secondary mt-3" onclick="backToQuiz()">Back</button>
-        <button class="btn btn-success mt-3" onclick="submitQuiz()">Submit</button>
-        <h3>Note: Review all the questions and answer before clicking submit.<br> You can change the answers also before submitting.</h3>
+    
+        <div class="button-group">
+            <button type="button" class="btn btn-secondary">Previous</button>
+            <button type="button" class="btn btn-success" onclick="submitQuiz()" >Submit</button>
+            <button type="button" class="btn btn-primary">Next</button>
+        </div>
+        <br>
+        <h6>Note: Review all the questions and answer before clicking submit. You can change the answers also before submitting.</h6>
     </div>
 
    <script defer src="review.js" type="text/javascript"></script>
